Make Original Invo App a multi-module app with modules directory: - Change index.php to request app/bootstrap.php instead of services.php (only namechange) - Place bootstrap.php in /app/ - Change the README.md

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -11,6 +11,6 @@ modelsDir      = app/models/
 viewsDir       = app/views/
 pluginsDir     = app/plugins/
 formsDir       = app/forms/
-libraryDir     = app/library/
-baseUri        = /invo/
+libraryDir     = /library/
+baseUri        = /
 
